// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileUpload /> renders default 1`] = `
<div>
  <h3>
    File Upload
  </h3>
  <Fragment>
    <b>
      Uploaded Files
    </b>
    <DataTable
      columns={
        Array [
          Object {
            "Header": "File Name",
            "accessor": "fileName",
          },
          Object {
            "Header": "File Description",
            "accessor": "fileDescription",
          },
          Object {
            "Header": "File Size",
            "accessor": "fileSize",
          },
          Object {
            "Cell": [Function],
            "Header": "Actions",
            "accessor": "actions",
          },
        ]
      }
      data={
        Array [
          Object {
            "fileDescription": "file1 desc",
            "fileName": "file1",
            "fileSize": 100,
            "size": "Unknown",
          },
          Object {
            "fileDescription": "file2 desc",
            "fileName": "file2",
            "fileSize": 200,
            "size": "Unknown",
          },
        ]
      }
      itemCount={2}
    />
  </Fragment>
  <Dropzone
    multiple={true}
    onProcessUpload={[MockFunction onProcessUpload]}
    progressVariant="bar"
  />
  <UploadConfirmModal
    closeHandler={[MockFunction closeUploadModal]}
    open={false}
    uploadHandler={[MockFunction confirmUpload]}
  />
</div>
`;

exports[`<FileUpload /> renders no uploaded files 1`] = `
<div>
  <h3>
    File Upload
  </h3>
  <Dropzone
    multiple={true}
    onProcessUpload={[MockFunction onProcessUpload]}
    progressVariant="bar"
  />
  <UploadConfirmModal
    closeHandler={[MockFunction closeUploadModal]}
    open={false}
    uploadHandler={[MockFunction confirmUpload]}
  />
</div>
`;

exports[`<FileUpload /> renders read only 1`] = `
<div>
  <h3>
    File Upload
  </h3>
  <Fragment>
    <b>
      Uploaded Files
    </b>
    <DataTable
      columns={
        Array [
          Object {
            "Header": "File Name",
            "accessor": "fileName",
          },
          Object {
            "Header": "File Description",
            "accessor": "fileDescription",
          },
          Object {
            "Header": "File Size",
            "accessor": "fileSize",
          },
          Object {
            "Cell": [Function],
            "Header": "Actions",
            "accessor": "actions",
          },
        ]
      }
      data={
        Array [
          Object {
            "fileDescription": "file1 desc",
            "fileName": "file1",
            "fileSize": 100,
            "size": "Unknown",
          },
          Object {
            "fileDescription": "file2 desc",
            "fileName": "file2",
            "fileSize": 200,
            "size": "Unknown",
          },
        ]
      }
      itemCount={2}
    />
  </Fragment>
  <UploadConfirmModal
    closeHandler={[MockFunction closeUploadModal]}
    open={false}
    uploadHandler={[MockFunction confirmUpload]}
  />
</div>
`;
